fix(theme): fix alignment issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     display: flex;
-    background: #0e0e0e;
+    background: #2d365c ;
     position: fixed;
     place-content: center;
     justify-content: center;
