--- a/src/app/password-generator/password-generator.component.scss
+++ b/src/app/password-generator/password-generator.component.scss
@@ -53,7 +53,17 @@
   
 
   .strength-indicator {
-    margin-top: 10px;
+    margin: 8px 0px 18px;
+    background-color: #000;
+    color: #fff;
+    padding: 14px 10px;
+    float: left;
+    width: 100%;
+    label{
+      margin-bottom: 0;
+      float: left;
+    }
+    
   }
   
   .strength-bar {
@@ -112,8 +122,19 @@
     font-size: 27px;
   }
   .checkbox-wrap {
+    display: flex;
+    align-items: center;
+    padding-bottom:10px;
+    margin-top: 10px;
     .checkbox-input {
         accent-color: #a9feb5;
         border: 1px solid #a9feb5;
+        width: 19px;
+        height: 19px;
+        margin-right: 10px;
+    }
+    .checkbox-label {
+      margin-bottom: 0;
+      color: #fff;
     }
   }
